--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,12 @@
 body{
-    font-family: 'SF Pro Display', sans-serif;
+    font-family: 'Lato';
 }
 header{
     display: flex;
-    background-color: #2f2a2d;
+    background-color: #ffffff;
+    border: 2px solid #ececec;
     justify-content: space-between;
-    color: #fafafa;
+    color: #f16d7f;
     padding: 30px 80px;
 }
 button:focus{
@@ -17,18 +18,17 @@ button:focus{
     font-weight: bold;
 }
 .btn-cart{
-    background-color: #fafafa;
+    background-color: #f16d7f;
     padding: 10px 20px;
-    border: 1px solid transparent;
-    color: #2f2a2d;
+    border: 1px solid #f16d7f;
+    transition: background-color 0.5s, color 0.3s;    color: #ffffff;
     border-radius: 5px;
-    transition: all ease-in-out .4s;
     cursor: pointer;
 }
 .btn-cart:hover{
-    background-color: transparent;
-    border-color: #fafafa;
-    color: #fafafa;
+    color: #f16d7f;
+    background-color: #ffffff;
+    border: 1px solid #f16d7f;
 }
 .btn-cart, .logo{
     align-self: center;
@@ -71,15 +71,15 @@ img {
     position: relative;
 }
 .cart-block{
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    box-shadow: 0 0 5px #f16d7f;
     border-radius: 5px;
     box-sizing: border-box;
     right: 0;
     top: 130%;
     position: absolute;
-    background-color: white;
+    background-color: #ffffff;
     padding: 20px;
-    color: black;
+    color: #4a4a4a;
     width: 300px;
 }
 
@@ -95,23 +95,23 @@ img {
     right: 35px;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-bottom: 10px solid white;
+    border-bottom: 10px solid #eaeaea;
 }
 
 .buy-btn, .del-btn{
     margin-top: 5px;
-    background-color: #2f2a2d;
+    background-color: #f16d7f;
     padding: 5px 15px;
     border: 1px solid transparent;
-    color: #fafafa;
+    color: #ffffff;
     border-radius: 5px;
     transition: all ease-in-out .4s;
     cursor: pointer;
 }
 .buy-btn:hover, .del-btn:hover{
-    background-color: #fafafa;
-    color: #2f2a2d;
-    border: 1px solid #2f2a2d;
+    color: #f16d7f;
+    background-color: #ffffff;
+    border: 1px solid #f16d7f;
 }
 .cart-item {
     display: flex;
@@ -127,9 +127,13 @@ img {
     align-self: flex-start;
     margin-right: 15px;
 }
+.cart-item-image {
+    width: 60px;
+    height: 60px;
+}
 .product-single-price{
-    color: #474747;
-    font-size: 0.5em;
+    color: #f16d7f;
+    font-size: 0.8em;
 }
 .product-price{
     margin-left: 30px;
@@ -138,8 +142,9 @@ img {
     max-width: 150px;
 }
 .product-quantity {
-    margin-top: 15px;
-    font-size: 0.75em;
+    margin: 15px 0;
+    font-size: 1em;
+    display: inline-block;
 }
 .right-block{
     text-align: right;
@@ -147,7 +152,7 @@ img {
 .btn-search {
     background-color: transparent;
     border: none;
-    color: #fafafa;
+    color: #f16d7f;
     font-size: 1.2em;
     position: absolute;
     bottom: 5px;
@@ -164,11 +169,11 @@ img {
 .search-field {
     box-sizing: border-box;
     width: 200px;
-    color: #fafafa;
+    color: #f16d7f;
     padding: 10px;
     background-color: transparent;
     border: none;
-    border-bottom: 2px solid #fafafa;
+    border-bottom: 2px solid #eaeaea;
 }
 .error-msg {
     padding: 30px 20px;
@@ -193,7 +198,11 @@ img {
     right: 0;
     background: none;
     border: none;
-    color: white;
+    color:  #eaeaea;
     font-weight: bold;
+}
+.product-item img{
+    width: 225px;
+    height: 225px;
 }
 
